[gd_scene load_steps=15 format=3 uid="uid://b8q601ynidim5"]

[ext_resource type="Script" uid="uid://clm7mwrxfyf6y" path="res://scripts/main.gd" id="1_o6xl0"]
[ext_resource type="Texture2D" uid="uid://fe36dvqpvmre" path="res://assets/background/bg.png" id="2_tipki"]
[ext_resource type="Texture2D" uid="uid://dswxflwj0fx48" path="res://assets/background/ground.png" id="3_85g3d"]
[ext_resource type="Texture2D" uid="uid://dw867gp8aqx8o" path="res://assets/sprite/OrganicTrashCan.png" id="4_choun"]
[ext_resource type="Texture2D" uid="uid://dl4ddclremc4y" path="res://assets/sprite/NonOrganicBin.png" id="5_ya4ey"]
[ext_resource type="Texture2D" uid="uid://bnf5qoxx32il2" path="res://assets/sprite/B3Bin.png" id="6_eb6dy"]
[ext_resource type="Texture2D" uid="uid://bo5f86ampxcmg" path="res://assets/UI/mockofun-text-editor.png" id="7_trceg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(190, 249)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
bg_color = Color(0.556863, 0.831373, 0.607843, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(0.558128, 0.83145, 0.607229, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(0, 0.713726, 0.454902, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kek77"]
bg_color = Color(0, 0.85098, 0.921569, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c57u"]
bg_color = Color(0, 0.851866, 0.921876, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efxa6"]
bg_color = Color(3.85046e-07, 0.675239, 0.760711, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Main" type="Node2D"]
script = ExtResource("1_o6xl0")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = 861.0
offset_bottom = 1284.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tipki")

[node name="TextureRect2" type="TextureRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1116.0
offset_right = 1729.0
offset_bottom = 1284.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_85g3d")
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.878431, 0.878431, 0.878431, 1)

[node name="BinOrganik" type="Area2D" parent="."]
position = Vector2(162, 1165)

[node name="Sprite2D" type="Sprite2D" parent="BinOrganik"]
position = Vector2(-37, -8)
scale = Vector2(0.604, 0.742)
texture = ExtResource("4_choun")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BinOrganik"]
position = Vector2(-37, -9.5)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="BinNonOrganik" type="Area2D" parent="."]
position = Vector2(401, 1166)

[node name="Sprite2D" type="Sprite2D" parent="BinNonOrganik"]
position = Vector2(-37, -8)
scale = Vector2(0.604, 0.742)
texture = ExtResource("5_ya4ey")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BinNonOrganik"]
position = Vector2(-37, -9.5)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="BinB3" type="Area2D" parent="."]
position = Vector2(643, 1166)

[node name="Sprite2D" type="Sprite2D" parent="BinB3"]
position = Vector2(-37, -8)
scale = Vector2(0.604, 0.742)
texture = ExtResource("6_eb6dy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BinB3"]
position = Vector2(-37, -9.5)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="TrashSpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Score: 0"
horizontal_alignment = 1

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -488.0
offset_right = 300.0
offset_bottom = 488.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="TextureRect" type="TextureRect" parent="GameOverScreen/ColorRect/VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_trceg")
stretch_mode = 3

[node name="Label" type="Label" parent="GameOverScreen/ColorRect/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="YourScoreLabel" type="Label" parent="GameOverScreen/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Your Score: "

[node name="HighScoreLabel" type="Label" parent="GameOverScreen/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Highest: "

[node name="PlayAgainButton" type="Button" parent="GameOverScreen/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_7mycd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_272bh")
theme_override_styles/normal = SubResource("StyleBoxFlat_5vw27")
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="GameOverScreen/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_kek77")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4c57u")
theme_override_styles/normal = SubResource("StyleBoxFlat_efxa6")
text = "Main Menu"

[connection signal="body_entered" from="BinOrganik" to="." method="_on_bin_organik_body_entered"]
[connection signal="body_entered" from="BinNonOrganik" to="." method="_on_bin_non_organik_body_entered"]
[connection signal="body_entered" from="BinB3" to="." method="_on_bin_b_3_body_entered"]
[connection signal="timeout" from="TrashSpawnTimer" to="." method="_on_trash_spawn_timer_timeout"]
[connection signal="pressed" from="GameOverScreen/ColorRect/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="GameOverScreen/ColorRect/VBoxContainer/MainMenuButton" to="." method="_on_button_pressed"]
